src/objects/Evening_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Evening Objects</relationshipLabel>
        <relationshipName>Evening_Objects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Evening Objects</relationshipLabel>
        <relationshipName>Evening_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evening Objects</relationshipLabel>
        <relationshipName>Evening_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>testing</label>
        <referenceTo>testing__c</referenceTo>
        <relationshipLabel>Evening Objects</relationshipLabel>
        <relationshipName>Evening_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Evening Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Evening Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evening Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>